# MyMediaVault

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
Assets/Addons/: README.md
Assets/Addons/Scripts/: AddonContext.cs  AddonInterfaces.cs  AddonManager.cs  AddonModels.cs  AudioLibrarySource.cs  AudioPlayerView.cs  BuiltinSampleSource.cs  JintScriptEngine.cs  MediaHub.cs  MediaInput.cs  MediaRouter.cs  RecentsStore.cs  RetroPlayer.cs  RomLibrarySource.cs  ScriptEngine.cs  ScriptMediaSource.cs  VideoLibrarySource.cs  (+1 more)
Assets/Resources/: PerformanceTestRunInfo.json
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
ProjectSettings/: ProjectSettings.asset
native/: CMakeLists.txt  README.md
native/addon-protocol/: README.md
native/addon-protocol/aiocatalog-worker/: README.md  package.json  wrangler.toml
native/addon-protocol/aiocatalog-worker/src/: worker.js
native/addon-protocol/sample-static/: manifest.json
native/addon-protocol/sample-static/catalog/: movies.json  series.json
native/addon-protocol/sample-static/detail/series/: s1.json
native/addon-protocol/sample-static/meta/movie/: m1.json
native/addon-protocol/sample-static/stream/movie/: m1.json
native/addon-protocol/worker/: wrangler.toml
native/addon-protocol/worker/src/: worker.js
native/addons/aiocatalog/: main.js  manifest.json
native/addons/hello-source/: main.js
native/addons/igdb/: main.js  manifest.json
native/addons/livetv/: main.js  manifest.json
native/addons/podcasts/: main.js  manifest.json
native/addons/screenscraper/: main.js  manifest.json
native/addons/steamgriddb/: main.js  manifest.json
native/addons/thegamesdb/: main.js  manifest.json
native/android/: AndroidManifest.xml  README.md
native/cmake/: GenerateSecrets.cmake
native/docs/: android-port.md  ios-port.md
native/resources/: Uninstall.cmd  make_icon.ps1  theme2.qrc
native/secrets/: README.md
native/src/: main.cpp
native/src/addons/: AddonContext.cpp  AddonContext.h  AddonManager.cpp  AddonManager.h  AddonModels.cpp  AddonModels.h  BuiltinSecrets.h.in  CatalogPrefetcher.cpp  CatalogPrefetcher.h  GameMetaAggregator.cpp  GameMetaAggregator.h  JsAddon.cpp  JsAddon.h
native/src/browse/: SearchAggregator.cpp  SearchAggregator.h  SyntheticCatalogs.cpp  SyntheticCatalogs.h
native/src/comic/: ComicView.cpp  ComicView.h
native/src/core/: Achievements.cpp  Achievements.h  AppPaths.h  AppUpdater.cpp  AppUpdater.h  ArchiveRom.cpp  ArchiveRom.h  AssetBootstrap.cpp  AssetBootstrap.h  BackgroundMusic.cpp  BackgroundMusic.h  BiosCatalog.h  CastManager.cpp  CastManager.h  CatalogMatch.cpp  CatalogMatch.h  CatalogResolver.cpp  CatalogResolver.h  CloudMerge.cpp  CloudMerge.h  CloudSync.cpp  CloudSync.h  ConsumptionStats.cpp  ConsumptionStats.h  CoreManager.cpp  CoreManager.h  DownloadManager.cpp  DownloadManager.h  DownloadsStore.cpp  DownloadsStore.h  EmulatorManager.cpp  EmulatorManager.h  EmulatorRegistry.h  EpicLibrary.cpp  EpicLibrary.h  ExternalPlayer.cpp  ExternalPlayer.h  FavoritesStore.cpp  FavoritesStore.h  GamelistStore.cpp  (+54 more)
native/src/ebook/: EbookSource.h  EbookView.cpp  EbookView.h  EpubBook.cpp  EpubBook.h  MobiBook.cpp  MobiBook.h  PdfTextBook.cpp  PdfTextBook.h
native/src/emu/: NetplaySession.cpp  NetplaySession.h  RetroView.cpp  RetroView.h  VirtualPad.cpp  VirtualPad.h
native/src/input/: Gamepad.cpp  Gamepad.h  Keymap.cpp  Keymap.h
native/src/launch/: GameLauncher.cpp  GameLauncher.h
native/src/libretro/: LibretroCore.cpp  LibretroCore.h
native/src/media/: PlaybackSession.cpp  PlaybackSession.h  StreamResolver.cpp  StreamResolver.h
native/src/pdf/: PdfView.cpp  PdfView.h
native/src/theme2/: FormFactor.cpp  FormFactor.h  HostedReader.h  MpvPreview.cpp  MpvPreview.h  PanelModel.h  ReaderChromeHost.cpp  ReaderChromeHost.h  ThemeEngine.cpp  ThemeEngine.h  ThemedPanelHost.cpp  ThemedPanelHost.h
native/src/theme2/qml/: HomeView.qml  Theme.js  ThemeView.qml
native/src/theme2/qml/elements/: ActionRow.qml  Button.qml  Carousel.qml  Channels.qml  Clock.qml  DateTime.qml  Gallery.qml  Grid.qml  HelpSystem.qml  Image.qml  NowPlaying.qml  NowPlayingAudio.qml  Panel.qml  Particles.qml  Rating.qml  ReaderChrome.qml  SettingsPanel.qml  Text.qml  ThemedChoice.qml  ThemedTextField.qml  Video.qml  Wave.qml  Xmb.qml
native/src/ui/: AddonSettingsDialog.cpp  AddonSettingsDialog.h  BlackFrameWatchdog.cpp  BlackFrameWatchdog.h  CarouselView.cpp  CarouselView.h  ControllerRemapDialog.cpp  ControllerRemapDialog.h  FeedbackPolicy.h  HomeView.cpp  HomeView.h  LibraryView.cpp  LibraryView.h  MainWindow.cpp  MainWindow.h  MediaPane.cpp  MediaPane.h  Notifier.cpp  Notifier.h  ProfileDialog.cpp  ProfileDialog.h  RegistryBrowser.cpp  RegistryBrowser.h  SettingsDialog.cpp  SettingsDialog.h  SplitView.cpp  SplitView.h  XmbView.cpp  XmbView.h
native/src/ui/nav/: Nav.cpp  Nav.h  NavGraph.cpp  NavGraph.h  NavOverlay.cpp  NavOverlay.h  NavThemeGraph.h  Osk.cpp  Osk.h
native/src/video/: MpvWidget.cpp  MpvWidget.h
native/themes-sample/: README.txt  Triple.json
native/themes2/: THEME_FORMAT.md
native/themes2/Channels/: theme.json
native/themes2/Default/: theme.json
native/themes2/Grid/: theme.json
native/themes2/Lumen/: theme.json
native/themes2/Midnight/: theme.json
native/themes2/XMB/: theme.json
native/tools/: fetch-mpvkit-ios.sh  netplay-relay.py  perfbaseline.py  polishsweep.py  pre-commit-version-bump.sh  probe_addon.cpp  probe_audio.cpp  probe_bootstrap.cpp  probe_browse.cpp  probe_cloudmerge.cpp  probe_core.cpp  probe_epub.cpp  probe_extplayer.cpp  probe_formfactor.cpp  probe_gameagg.cpp  probe_gamelist.cpp  probe_image.cpp  probe_importers.cpp  probe_locallib.cpp  probe_m3u.cpp  probe_marks.cpp  probe_meta.cpp  probe_mobi.cpp  probe_mpvpreview.cpp  probe_nav.cpp  probe_navqml.cpp  probe_netplay.cpp  probe_netplay_both.cpp  probe_notifier.cpp  probe_onboarding.cpp  probe_pageview.cpp  probe_pdf.cpp  probe_pdftext.cpp  probe_perf.cpp  probe_playback.cpp  probe_playlists.cpp  probe_portmap.cpp  probe_rahash.cpp  probe_resolver.cpp  probe_stats.cpp  (+5 more)
(+55 files in other folders)
